contact.css
/*Global*/

body {
    height: 100vh;
}

main {
    text-align: center;
    width: 100%;
}
/*Contact*/

.contact-info {
    width: 45%;
    margin: 0 auto;
}

main #phone-number {
    border: 1px black solid;
    margin-bottom: 50px;
    margin-top: 50px;

}

@media only screen and (max-width: 30rem) {
    main .contact-info {
        width: 80%;
    }
}

@media only screen and (max-width: 17rem) {
    
    main h2 {
        font-size: 1rem;
    }
    
    main p {
        font-size: 0.8rem
    }
}

@media only screen and (max-width: 13.8rem) {
    main .contact-info {
        width: 100%;
    }
}

@media only screen and (max-width: 11.5rem) {
    main h2 {
        font-size: 0.7rem;
    }

    main p {
        font-size: 0.6rem;
    }
}



main #email {
    border: 1px black solid;
}

/*Github*/

main .github {
    margin-top: 50px;
}

